<resources>
    <string name="app_name">LAMMICC</string>
    <string name="title_nutrition">Nutrition</string>
    <string name="title_recipes">Recipes</string>
    <string name="title_shopping">Shopping</string>
    <string name="title_activity_meal">My Meals</string>
    <string name="title_activity_breakfast1">Breakfast1Activity</string>
    <string name="breakfast1recipe">Look at me I have instructions!</string>

    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>


    <string name="select_diet">Select Diet</string>
    <string name="next"><![CDATA[Next ->]]></string>

    <string name="no_specific_diet">No Preference</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="vegan">Vegan</string>
    <string name="dietary_restrictions">Dietary Restrictions</string>
    <string name="daily_meal">Daily Meal</string>
    <string name="lunch">Lunch</string>
    <string name="add_a_meal_to_start_prepping">Add a meal to start prepping!</string>
    <string name="breakfast">Breakfast</string>
    <string name="dinner">Dinner</string>
    <string name="background">bg</string>
    <string name="arrow">arrow</string>
</resources>
