<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_nutrition">

    <fragment
        android:id="@+id/navigation_nutrition"
        android:name="com.example.sdhacks2019.ui.home.HomeFragment"
        android:label="@string/title_nutrition"
        tools:layout="@layout/fragment_nutrition" />

    <fragment
        android:id="@+id/navigation_recipes"
        android:name="com.example.sdhacks2019.ui.dashboard.DashboardFragment"
        android:label="@string/title_recipes"
        tools:layout="@layout/fragment_recipes" />

    <fragment
        android:id="@+id/navigation_shopping"
        android:name="com.example.sdhacks2019.ui.notifications.NotificationsFragment"
        android:label="@string/title_shopping"
        tools:layout="@layout/fragment_shopping" />
</navigation>