<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".DailyActivity">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:alpha=".6"
        android:contentDescription="@string/background"
        android:scaleX="1.1"
        android:scaleY="1.1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baking" />

    <TextView
        android:id="@+id/Meal"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50sp"
        android:fontFamily="@font/acme"
        android:gravity="center|center_horizontal|center_vertical"
        android:scaleX="1"
        android:scaleY="1"
        android:text="@string/daily_meal"
        android:textAllCaps="true"
        android:textColor="#838383"
        android:textSize="40sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/breakfastButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/lunchButton"
        android:layout_width="300sp"
        android:layout_height="125dp"
        android:layout_above="@+id/dinnerButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="1dp"
        android:fontFamily="@font/abel"
        android:text="@string/lunch"
        android:textColor="#726D6D"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/dinnerButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/breakfastButton"
        app:layout_constraintVertical_bias="0.51" />

    <Button
        android:id="@+id/breakfastButton"
        android:layout_width="300sp"
        android:layout_height="125dp"
        android:layout_above="@+id/lunchButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="192dp"
        android:fontFamily="@font/abel"
        android:text="@string/breakfast"
        android:textColor="#726D6D"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/lunchButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/lunchButton"
        app:layout_constraintTop_toTopOf="@+id/imageView4" />

    <Button
        android:id="@+id/dinnerButton"
        android:layout_width="300sp"

        android:layout_height="125dp"
        android:layout_above="@+id/lunchButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="116dp"
        android:fontFamily="@font/abel"
        android:text="@string/dinner"
        android:textColor="#726D6D"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="@+id/lunchButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/lunchButton" />


</androidx.constraintlayout.widget.ConstraintLayout>